fixed scrolling with overflow-y

--- a/style.css
+++ b/style.css
@@ -21,9 +21,11 @@ h1 {
 
     float: left;
     text-align: left;
-    padding: 30px;
+    padding-bottom: 30px;
+    padding-top: 15px;
     color: lightgray;
-    z-index: 1;
+    z-index: 1000;
+    position: relative;
 }
 
 
@@ -48,7 +50,8 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  position: absolute;
+  overflow-y: scroll;
   
 }
 canvas {
@@ -62,4 +65,26 @@ canvas {
     z-index: 1000;
     position: relative;
     border:0px;
+}
+
+form {
+
+    z-index: 1000;
+    position: relative;
+}
+
+
+.form-group {
+
+    z-index: 1000;
+    position: relative;
+}
+
+img {
+
+    z-index: 1000;
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
